--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     rel="stylesheet">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/slick.css">
-  <link rel="stylesheet" href="css/jquery.fancybox.css">
+  <link rel="stylesheet" href="css/magnific-popup.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -49,7 +49,7 @@
         <h1 class="header__title">Сафари по Африке</h1>
         <div class="header__content">
           <p class="header__descr">
-            Туры по самомым экзотическим местам
+            Туры по самым экзотическим местам
             Поехали с нами за новыми впечатлениями!
           </p>
           <a href="#" class="header__btn">Оставить заявку</a>
@@ -112,10 +112,256 @@
       </div>
     </div>
   </div>
+
+  <section class="travel-info">
+    <div class="container">
+      <h2 class="travel-info__title title">Основные направления</h2>
+      <div class="travel-info__items">
+        <div class="travel-info__item">
+          <img src="images/icon-1.svg" alt="travel" class="travel-info__img">
+          <p class="travel-info__text">
+            Полная организация отдыха: групповые и индивидуальные туры.
+          </p>
+        </div>
+        <div class="travel-info__item">
+          <img src="images/icon-2.svg" alt="travel" class="travel-info__img">
+          <p class="travel-info__text">
+            Организация трансфера из любой точки мира
+          </p>
+        </div>
+        <div class="travel-info__item">
+          <img src="images/icon-3.svg" alt="travel" class="travel-info__img">
+          <p class="travel-info__text">
+            Проживание в отелях по маршруту
+          </p>
+        </div>
+        <div class="travel-info__item">
+          <img src="images/icon-4.svg" alt="travel" class="travel-info__img">
+          <p class="travel-info__text">
+            Аренда автомобилей и любого вида транспорта
+          </p>
+        </div>
+        <div class="travel-info__item">
+          <img src="images/icon-5.svg" alt="travel" class="travel-info__img">
+          <p class="travel-info__text">
+            Медицинская страховка
+          </p>
+        </div>
+        <div class="travel-info__item">
+          <img src="images/icon-6.svg" alt="travel" class="travel-info__img">
+          <p class="travel-info__text">
+            Сопровождение русскоговорящих гидов
+          </p>
+        </div>
+        <div class="travel-info__item">
+          <img src="images/icon-7.svg" alt="travel" class="travel-info__img">
+          <p class="travel-info__text">
+            Организация VIP-туров
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="popular">
+    <div class="container">
+      <h2 class="popular__title title">
+        Популярные предложения
+      </h2>
+      <div class="popular__items">
+        <a href="#" class="popular__link" style="background-image: url(images/popular-1.jpg)">
+          <h4 class="popular__link-title">
+            ПУТЕШЕСТВИЕ ПО НАМИБИИ
+          </h4>
+          <p class="popular__price">от 3000 $</p>
+        </a>
+        <a href="#" class="popular__link" style="background-image: url(images/popular-2.jpg)">
+          <h4 class="popular__link-title">
+            КЛАССИКА КЕНИИ
+          </h4>
+          <p class="popular__price">от 3500 $</p>
+        </a>
+        <a href="#" class="popular__link" style="background-image: url(images/popular-5.jpg)">
+          <h4 class="popular__link-title popular__link-title--big">
+            САМЫЕ ПОПУЛЯРНЫЕ САФАРИ ПАРКИ И ЗАПОВЕДНИКИ ТАНЗАНИИ
+          </h4>
+          <p class="popular__country">Танзания</p>
+          <p class="popular__time">7 дней / 6 ночей</p>
+          <p class="popular__price">от 1700 $</p>
+        </a>
+        <a href="#" class="popular__link" style="background-image: url(images/popular-3.jpg)">
+          <h4 class="popular__link-title">
+            ИССЛЕДОВАНИЕ БОТСВАНЫ
+          </h4>
+          <p class="popular__price">от 2500 $</p>
+        </a>
+        <a href="#" class="popular__link" style="background-image: url(images/popular-4.jpg)">
+          <h4 class="popular__link-title">
+            ПУТЕШЕСТВИЕ ЧЕРЕЗ 5 СТРАН ЮЖНОЙ АФРИКИ
+          </h4>
+          <p class="popular__price">от 5000 $</p>
+        </a>
+        <a href="#" class="popular__link" style="background-image: url(images/popular-6.jpg)">
+          <h4 class="popular__link-title popular__link-title--big">
+            ГРАНДИОЗНОЕ ПРИКЛЮЧЕНИЕ ПО 9 СТРАНАМ АФРИКИ
+          </h4>
+          <p class="popular__country">
+            ЮАР, Замбия, Намибия, Зимбабве, Ботсвана, Мозамбик, Танзания, Кения
+          </p>
+          <p class="popular__time">24 дня / 23 ночи</p>
+          <p class="popular__price">от 6000 $</p>
+        </a>
+        <a href="#" class="popular__link" style="background-image: url(images/popular-7.jpg)">
+          <h4 class="popular__title">
+            ВЕЛИКОЛЕПНЫЙ КЕЙПТАУН
+          </h4>
+          <p class="popular__price">от 3500 $</p>
+        </a>
+        <a href="#" class="popular__link" style="background-image: url(images/popular-8.jpg)">
+          <h4 class="popular__link-title">
+            ПУТЕШЕСТВИЕ ПО ЮАР
+          </h4>
+          <p class="popular__price">от 2500 $</p>
+        </a>
+        <a href="#" class="popular__link" style="background-image: url(images/popular-9.jpg)">
+          <h4 class="popular__link-title">
+            ВЕЛИКАЯ МИГРАЦИЯ В ТАНЗАНИИ И ОТДЫХ НА ЗАНЗИБАРЕ
+          </h4>
+          <p class="popular__price">от 1700 $</p>
+        </a>
+        <a href="#" class="popular__link" style="background-image: url(images/popular-10.jpg)">
+          <h4 class="popular__link-title">
+            ОТ КЕЙПТАУНА ДО ВОДОПАДА ВИКТОРИЯ
+          </h4>
+          <p class="popular__price">от 2500 $</p>
+        </a>
+      </div>
+    </div>
+  </section>
+  <section class="map">
+    <div class="container">
+      <h2 class="map__title title">Карта Африки</h2>
+      <iframe class="map__iframe" src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d24559677.86397988!2d7.016630475830443!3d3.221917558083356!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sru!2sua!4v1633642827547!5m2!1sru!2sua"
+        width="1120" height="610" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    </div>
+  </section>
+
+  <section class="about">
+    <div class="container">
+      <div class="about__inner">
+        <div class="about__content">
+          <h2 class="about__title title">О сафари турах</h2>
+          <p class="about__text">
+            Восточная и Южная Африка являются самыми популярными местами, где можно насладиться увлекательным путешествием, под
+            названием сафари. Именно здесь созданы все условия, чтобы туристы могли почувствовать себя частичкой девственной природы
+            Африки. Туры сафари в Африку характеризуются уникальными программами, в рамках которых туристы перемещаются на
+            комфортабельных, специализированных автомобилях или автобусах.
+          </p>
+          <a href="#" class="about__link">Читать подробней</a>
+        </div>
+        <div class="about__popup">
+          <a href="https://www.youtube.com/watch?v=7eAG_458Hj0" class="popup__link">
+            <img src="images/popup.svg" alt="play" class="about__link-img">
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="gallery">
+    <div class="container">
+      <div class="gallery__top">
+        <h2 class="gallery__title title">Фотогалерея</h2>
+        <a class="gallery__link" href="#">Перейти в раздел</a>
+      </div>
+      <div class="gallery__slider">
+
+        <div class="gallery__item">
+          <div class="gallery__item-inner">
+            <a class="gallery__item-link" href="images/gallery-1.jpg">
+              <img class="gallery__item-img" src="images/gallery-1.jpg" alt="gallery">
+            </a>
+            <a class="gallery__item-link" href="images/gallery-2.jpg">
+              <img class="gallery__item-img" src="images/gallery-2.jpg" alt="gallery">
+            </a>
+            <a class="gallery__item-link" href="images/gallery-3.jpg">
+              <img class="gallery__item-img" src="images/gallery-3.jpg" alt="gallery">
+            </a>
+            <a class="gallery__item-link" href="images/gallery-4.jpg">
+              <img class="gallery__item-img" src="images/gallery-4.jpg" alt="gallery">
+            </a>
+            <a class="gallery__item-link" href="images/gallery-5.jpg">
+              <img class="gallery__item-img" src="images/gallery-5.jpg" alt="gallery">
+            </a>
+            <a class="gallery__item-link" href="images/gallery-6.jpg">
+              <img class="gallery__item-img" src="images/gallery-6.jpg" alt="gallery">
+            </a>
+          </div>
+        </div>
+        
+        <div class="gallery__item">
+          <div class="gallery__item-inner">
+            <a class="gallery__item-link" href="images/gallery-1.jpg">
+              <img class="gallery__item-img" src="images/gallery-1.jpg" alt="gallery">
+            </a>
+            <a class="gallery__item-link" href="images/gallery-2.jpg">
+              <img class="gallery__item-img" src="images/gallery-2.jpg" alt="gallery">
+            </a>
+            <a class="gallery__item-link" href="images/gallery-3.jpg">
+              <img class="gallery__item-img" src="images/gallery-3.jpg" alt="gallery">
+            </a>
+            <a class="gallery__item-link" href="images/gallery-4.jpg">
+              <img class="gallery__item-img" src="images/gallery-4.jpg" alt="gallery">
+            </a>
+            <a class="gallery__item-link" href="images/gallery-5.jpg">
+              <img class="gallery__item-img" src="images/gallery-5.jpg" alt="gallery">
+            </a>
+            <a class="gallery__item-link" href="images/gallery-6.jpg">
+              <img class="gallery__item-img" src="images/gallery-6.jpg" alt="gallery">
+            </a>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+  <h1>Сафари тур премиум класса</h1>
+  <p>
+    Сафари тур ? это уникальное путешествие в мир дикой природы, знакомство с многогранной Африкой, наблюдение за дикими
+    животными в их привычной среде обитания.
+    САФАРИ ТУРИСТИК специализируется на элитном туризме и представляет своим клиентам уникальные программы сафари
+    туров.Среди представленных вариантов можно найти нечто неповторимое, по вашему вкусу.
+    Если вы желаете отправиться в самое незабываемое путешествие в вашей жизни, побывать в уникальных местах и увидеть то,
+    что удается лицезреть немногим ? тогда сафари туры созданы для вас.
+    Сафари туры выбирают туристы, которые предпочитают динамичный, яркий, насыщенный эмоциями и впечатлениями отдых.
+    Программы сафари туров по Африке рассчитаны на определенную группу людей, которые под покровительством куратора,
+    осуществляют увлекательное путешествие по заранее спланированному маршруту. Мы ориентированы на клиентов VIP класса,
+    поэтому все предложения, представленные в нашей коллекции, отличаются высшим классом, детально продуманной программой,
+    первоклассным сервисом и индивидуальным подходом к каждому участнику путешествия. У нас на сайте вы можете прочитать все
+    подробности о программах уже сформированных туров по сафари.
+  </p>
+  <!-- лет успешной работы -->
+  <!-- гостиниц без посредников -->
+  <!-- собственных туров -->
+  <!-- кв. км – площадь наших путешествий -->
+  <!-- довольных туристов -->
+  <h2>Забронируйте отдых в Африке</h2>
+  <!-- Ваше имя Телефон E-mail Комментарий Отправить заявку Согласие на обработку персональных данных -->
+
+  <!-- Турагентство «Сафари Туристик» © 2021. Все права защищены Политика конфиденциальности Адрес: -->
+
+  <!-- г. Киев, ул.Мира, 20,
+  отель «Динамо», 1 этаж -->
+
+  <!-- Заказ туров и бронирование: -->
+
+  <!-- тел. 8-050-8-543-543
+  e-mail: safari_turistic@gmail.com -->
   
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/slick.min.js"></script>
-  <script src="js/jquery.fancybox.min.js"></script>
+  <script src="js/jquery.magnific-popup.min.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
