--- a/index.html
+++ b/index.html
@@ -15,33 +15,36 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header class="header">
+   <header class="header" id="Home">
     <div class="container">
       <div class="header__inner">
         <div class="header__top">
-          <a href="#" class="logo">
-            <img src="images/logo.svg" alt="logo" class="logo_img">
+          <a href="#Home" class="logo">
+            <img src="images/logo.svg" alt="logo" class="logo__img">
           </a>
           <div class="header__phone">
-            Заказ туров и бронирование:
+            <span>Заказ туров и бронирование:</span>
             <a href="tel:80508543543" class="header__phone-number">тел. 8-050-8-543-543</a>
           </div>
           <nav class="menu">
+            <button class="menu__btn">
+              <span class="row"></span>
+            </button>
             <ul class="menu__list">
               <li class="menu__item">
-                <a href="#" class="menu__link">Бронирование</a>
+                <a href="#Form" class="menu__link">Бронирование</a>
               </li>
               <li class="menu__item">
-                <a href="#" class="menu__link">Экскурсии</a>
+                <a href="#Excursion" class="menu__link">Экскурсии</a>
               </li>
               <li class="menu__item">
-                <a href="#" class="menu__link">Туры</a>
+                <a href="#Tour" class="menu__link">Туры</a>
               </li>
               <li class="menu__item">
-                <a href="#" class="menu__link">Об Африке</a>
+                <a href="#about" class="menu__link">Об Африке</a>
               </li>
               <li class="menu__item">
-                <a href="#" class="menu__link">О нас</a>
+                <a href="#Us" class="menu__link">О нас</a>
               </li>
             </ul>
           </nav>
@@ -52,118 +55,124 @@
             Туры по самым экзотическим местам
             Поехали с нами за новыми впечатлениями!
           </p>
-          <a href="#" class="header__btn">Оставить заявку</a>
+          <a href="#Form" class="header__btn">Оставить заявку</a>
           <div class="header__arrow">
             <a href="#" class="header__arrow-link">
-              <img src="images/arrow.svg" alt="arrow" class="header__arrow-img">
+              <svg class="header__arrow-img" width="41" height="41" viewBox="0 0 41 41" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M20.4999 11.0023L20.4999 28.6023" stroke-miterlimit="10" />
+                <path d="M13.9999 22.6022L20.5004 29.0022L26.9999 22.6022" stroke-miterlimit="10" />
+                <path
+                  d="M0.5 20.5C0.5 9.45431 9.45431 0.5 20.5 0.5C31.5457 0.5 40.5 9.45431 40.5 20.5C40.5 31.5457 31.5457 40.5 20.5 40.5C9.45431 40.5 0.5 31.5457 0.5 20.5Z"
+                  stroke-miterlimit="10" />
+              </svg>
             </a>
           </div>
         </div>
       </div>
     </div>
   </header>
-  <div class="direction">
+  <div class="direction" id="excursion">
     <div class="container">
-      <div class="direction__inner">
-        <div class="direction__item">
+      <ul class="direction__inner">
+        <li class="direction__item">
           <img src="images/direction-1.jpg" alt="directions" class="direction__img">
           <p class="direction__title">Намибия</p>
-        </div>
-        <div class="direction__item">
+        </li>
+        <li class="direction__item">
           <img src="images/direction-2.jpg" alt="directions" class="direction__img">
           <p class="direction__title">Танзания</p>
-        </div>
-        <div class="direction__item">
+        </li>
+        <li class="direction__item">
           <img src="images/direction-3.jpg" alt="directions" class="direction__img">
           <p class="direction__title">Кения</p>
-        </div>
-        <div class="direction__item">
+        </li>
+        <li class="direction__item">
           <img src="images/direction-4.jpg" alt="directions" class="direction__img">
           <p class="direction__title">Ботсвана</p>
-        </div>
-        <div class="direction__item">
+        </li>
+        <li class="direction__item">
           <img src="images/direction-5.jpg" alt="directions" class="direction__img">
           <p class="direction__title">Кейптаун</p>
-        </div>
-        <div class="direction__item">
+        </li>
+        <li class="direction__item">
           <img src="images/direction-6.jpg" alt="directions" class="direction__img">
           <p class="direction__title">Мадагаскар</p>
-        </div>
-        <div class="direction__item">
+        </li>
+        <li class="direction__item">
           <img src="images/direction-7.jpg" alt="directions" class="direction__img">
           <p class="direction__title">Занзибар</p>
-        </div>
-        <div class="direction__item">
+        </li>
+        <li class="direction__item">
           <img src="images/direction-8.jpg" alt="directions" class="direction__img">
           <p class="direction__title">ЮАР</p>
-        </div>
-        <div class="direction__item">
+        </li>
+        <li class="direction__item">
           <img src="images/direction-9.jpg" alt="directions" class="direction__img">
           <p class="direction__title">Мозамбик</p>
-        </div>
-        <div class="direction__item">
+        </li>
+        <li class="direction__item">
           <img src="images/direction-10.jpg" alt="directions" class="direction__img">
           <p class="direction__title">Замбия</p>
-        </div>
-        <div class="direction__item">
+        </li>
+        <li class="direction__item">
           <img src="images/direction-11.jpg" alt="directions" class="direction__img">
           <p class="direction__title">Конго</p>
-        </div>
-      </div>
+        </li>
+      </ul>
     </div>
   </div>
 
   <section class="travel-info">
     <div class="container">
       <h2 class="travel-info__title title">Основные направления</h2>
-      <div class="travel-info__items">
-        <div class="travel-info__item">
+      <ul class="travel-info__items">
+        <li class="travel-info__item">
           <img src="images/icon-1.svg" alt="travel" class="travel-info__img">
           <p class="travel-info__text">
             Полная организация отдыха: групповые и индивидуальные туры.
           </p>
-        </div>
-        <div class="travel-info__item">
+        </li>
+        <li class="travel-info__item">
           <img src="images/icon-2.svg" alt="travel" class="travel-info__img">
           <p class="travel-info__text">
             Организация трансфера из любой точки мира
           </p>
-        </div>
-        <div class="travel-info__item">
+        </li>
+        <li class="travel-info__item">
           <img src="images/icon-3.svg" alt="travel" class="travel-info__img">
           <p class="travel-info__text">
             Проживание в отелях по маршруту
           </p>
-        </div>
-        <div class="travel-info__item">
+        </li>
+        <li class="travel-info__item">
           <img src="images/icon-4.svg" alt="travel" class="travel-info__img">
           <p class="travel-info__text">
             Аренда автомобилей и любого вида транспорта
           </p>
-        </div>
-        <div class="travel-info__item">
+        </li>
+        <li class="travel-info__item">
           <img src="images/icon-5.svg" alt="travel" class="travel-info__img">
           <p class="travel-info__text">
             Медицинская страховка
           </p>
-        </div>
-        <div class="travel-info__item">
+        </li>
+        <li class="travel-info__item">
           <img src="images/icon-6.svg" alt="travel" class="travel-info__img">
           <p class="travel-info__text">
             Сопровождение русскоговорящих гидов
           </p>
-        </div>
-        <div class="travel-info__item">
+        </li>
+        <li class="travel-info__item">
           <img src="images/icon-7.svg" alt="travel" class="travel-info__img">
           <p class="travel-info__text">
             Организация VIP-туров
           </p>
-        </div>
-      </div>
+        </li>
+      </ul>
     </div>
   </section>
 
-  <section class="popular">
+  <section class="popular" id="Tour">
     <div class="container">
       <h2 class="popular__title title">
         Популярные предложения
@@ -242,11 +251,11 @@
     <div class="container">
       <h2 class="map__title title">Карта Африки</h2>
       <iframe class="map__iframe" src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d24559677.86397988!2d7.016630475830443!3d3.221917558083356!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sru!2sua!4v1633642827547!5m2!1sru!2sua"
-        width="1120" height="610" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        width="100%" height="610" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
   </section>
 
-  <section class="about">
+  <section class="about" id="about">
     <div class="container">
       <div class="about__inner">
         <div class="about__content">
@@ -326,39 +335,114 @@
     </div>
   </section>
 
-  <h1>Сафари тур премиум класса</h1>
-  <p>
-    Сафари тур ? это уникальное путешествие в мир дикой природы, знакомство с многогранной Африкой, наблюдение за дикими
-    животными в их привычной среде обитания.
-    САФАРИ ТУРИСТИК специализируется на элитном туризме и представляет своим клиентам уникальные программы сафари
-    туров.Среди представленных вариантов можно найти нечто неповторимое, по вашему вкусу.
-    Если вы желаете отправиться в самое незабываемое путешествие в вашей жизни, побывать в уникальных местах и увидеть то,
-    что удается лицезреть немногим ? тогда сафари туры созданы для вас.
-    Сафари туры выбирают туристы, которые предпочитают динамичный, яркий, насыщенный эмоциями и впечатлениями отдых.
-    Программы сафари туров по Африке рассчитаны на определенную группу людей, которые под покровительством куратора,
-    осуществляют увлекательное путешествие по заранее спланированному маршруту. Мы ориентированы на клиентов VIP класса,
-    поэтому все предложения, представленные в нашей коллекции, отличаются высшим классом, детально продуманной программой,
-    первоклассным сервисом и индивидуальным подходом к каждому участнику путешествия. У нас на сайте вы можете прочитать все
-    подробности о программах уже сформированных туров по сафари.
-  </p>
-  <!-- лет успешной работы -->
-  <!-- гостиниц без посредников -->
-  <!-- собственных туров -->
-  <!-- кв. км – площадь наших путешествий -->
-  <!-- довольных туристов -->
-  <h2>Забронируйте отдых в Африке</h2>
-  <!-- Ваше имя Телефон E-mail Комментарий Отправить заявку Согласие на обработку персональных данных -->
+  <section class="tour">
+    <div class="container">
+      <h2 class="tour__title title">Сафари тур премиум класса</h2>
+      <div class="tour__box">
+        <p class="tour__text">
+          Сафари тур ? это уникальное путешествие в мир дикой природы, знакомство с многогранной Африкой, наблюдение за дикими
+          животными в их привычной среде обитания.
+        </p>
+        <p class="tour__text">
+          <span>САФАРИ ТУРИСТИК</span> специализируется на элитном туризме и представляет своим клиентам уникальные программы сафари
+          туров.Среди представленных вариантов можно найти нечто неповторимое, по вашему вкусу.
+        </p>
+        <p class="tour__text">
+          Если вы желаете отправиться в самое незабываемое путешествие в вашей жизни, побывать в уникальных местах и увидеть то,
+          что удается лицезреть немногим ? тогда сафари туры созданы для вас.
+        </p>
+        <p class="tour__text">
+          Программы сафари туров по Африке рассчитаны на определенную группу людей, которые под покровительством куратора,
+          осуществляют увлекательное путешествие по заранее спланированному маршруту. Мы ориентированы на клиентов VIP класса,
+          поэтому все предложения, представленные в нашей коллекции, отличаются высшим классом, детально продуманной программой,
+          первоклассным сервисом и индивидуальным подходом к каждому участнику путешествия. У нас на сайте вы можете прочитать все
+          подробности о программах уже сформированных туров по сафари.
+        </p>
+      </div>
+      <ul class="tour__info">
+        <li class="tour__info-item">
+          16
+          <p class="tour__info-text">
+            лет успешной работы
+          </p>
+        </li>
+        <li class="tour__info-item">
+          50
+          <p class="tour__info-text">
+            гостиниц без посредников
+          </p>
+        </li>
+        <li class="tour__info-item">
+          25+
+          <p class="tour__info-text">
+            собственных туров
+          </p>
+        </li>
+        <li class="tour__info-item">
+          1220000
+          <p class="tour__info-text">
+            кв. км – площадь наших путешествий
+          </p>
+        </li>
+        <li class="tour__info-item">
+          5000
+          <p class="tour__info-text">
+            довольных туристов
+          </p>
+        </li>
+      </ul>
+    </div>
+  </section>
 
-  <!-- Турагентство «Сафари Туристик» © 2021. Все права защищены Политика конфиденциальности Адрес: -->
+  <section class="booking" id="Form">
+    <div class="container">
+      <h2 class="booking__title title">
+        Забронируйте отдых в Африке
+      </h2>
+      <form class="booking__form">
+        <input class="booking__input" type="text" placeholder="Ваше имя">
+        <input class="booking__input" type="phone" placeholder="Телефон">
+        <input class="booking__input" type="email" placeholder="E-mail">
+        <textarea class="booking__area" placeholder="Комментарий"></textarea>
+        <button class="booking__btn" type="submit">Отправить заявку</button>
+        <label class="booking__label">
+          <input class="booking__checkbox" type="checkbox">
+          <span class="booking__checkbox-style"></span>
+          Согласие на обработку персональных данных
+        </label>
+      </form>
+    </div>
+  </section>
 
-  <!-- г. Киев, ул.Мира, 20,
-  отель «Динамо», 1 этаж -->
+  <footer class="footer" id="Us">
+    <div class="container">
+      <div class="footer__logo">
+        <a href="#Home" class="logo">
+          <img src="images/logo.svg" alt="logo" class="logo_img">
+        </a>
+      </div>
+      <div class="footer__box">
+        <div class="footer__info">
+          <p class="footer__box-title">Турагентство «Сафари Туристик»</p>
+          <p class="footer__copy">© 2021. Все права защищены</p>
+          <a class="footer__link" href="#">Политика конфиденциальности</a>
+        </div>
+        <div class="footer__adress">
+          <p class="footer__box-title">Адрес:</p>
+          <p class="footer__adress-text">
+            г. Киев, ул.Мира, 20,
+            отель «Динамо», 1 этаж
+          </p>
+        </div>
+        <div class="footer__contacts">
+          <p class="footer__box-title">Заказ туров и бронирование:</p>
+          <a class="footer__phone" href="tel:80508543543">тел. 8-050-8-543-543</a>
+          <a class="footer__mail" href="mailto:safari_turistic@gmail.com">e-mail: safari_turistic@gmail.com</a>
+        </div>
+      </div>
+    </div>
+  </footer>
 
-  <!-- Заказ туров и бронирование: -->
-
-  <!-- тел. 8-050-8-543-543
-  e-mail: safari_turistic@gmail.com -->
-  
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/slick.min.js"></script>
   <script src="js/jquery.magnific-popup.min.js"></script>
