--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       </div>
     </div>
   </header>
-  <div class="direction" id="excursion">
+  <div class="direction" id="Excursion">
     <div class="container">
       <ul class="direction__inner">
         <li class="direction__item">
